# aud-ws201516

./: .gitignore  CMakeLists.txt  LICENSE  list.c  list.h  readline.c  tree.c
E04/: .gitignore  A2a.c  A2b.c  A2c.c  A3.c  CMakeLists.txt
E05/: A1-main.c  A1.h  A1a-efficient.c  A1a-iterative.c  A1a-naive.c  A1a.c  A1a.h  A1b.c  A1c-f.c  A1c-m.c  A1c.c  A1c.h  A3.c  CMakeLists.txt
E06/: A2a.c  A3-main.c  A3a.c  A3b.c  CMakeLists.txt
E07/: CMakeLists.txt
E07/A1a/: CMakeLists.txt  iterative-for.c  iterative-while.c  recursive.c  sum.h  test.c
E07/A1b/: CMakeLists.txt  double-pointer.h  iterative-double-pointer.c  recursive-return-value.c  return-value.h  test-double-pointer.c  test-return-value.c
E07/A2/: CMakeLists.txt  baz.c  leafprod.c  test-baz.c  test-leafprod.c
E08/: A1a.c  A1b.c  CMakeLists.txt
